admission/ValidatingAdmissionPolicy/policies/poststart-tcpsocket-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poststart-tcpsocket-host-containers
  annotations:
    kubeapt.io/uuid: "11bc67f9-eb75-45b1-a5a2-9df6049e98dd"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    lifecycle:
      postStart:
        tcpSocket:
          port: 80
          host: 127.0.0.1
